// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`modal should render the component 1`] = `
<TransitionWrapper
  getPortalElement={[Function]}
  isOpen={false}
  isPortalReady={false}
  render={[Function]}
  transitionEnterTimeout={300}
  transitionExitTimeout={300}
  transitionName="modal"
/>
`;

exports[`modal should render the render prop 1`] = `
<div>
  <div
    className="my-layover"
  />
  <div
    className="my-popup"
    style={
      Object {
        "color": "#fff",
        "left": 0,
        "top": 0,
      }
    }
  >
    <div>
      View
    </div>
  </div>
</div>
`;

exports[`modal should render the render prop 2`] = `
<div>
  <div
    className="my-layover"
  />
  <div
    className="my-popup"
    style={
      Object {
        "color": "#fff",
        "left": 0,
        "top": 0,
      }
    }
  >
    <div>
      View
    </div>
  </div>
</div>
`;

exports[`modal should render with modal prop 1`] = `
<TransitionWrapper
  getPortalElement={[Function]}
  isOpen={true}
  isPortalReady={false}
  render={[Function]}
  transitionEnterTimeout={300}
  transitionExitTimeout={300}
  transitionName="modal"
/>
`;
